src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Address__c</fullName>
        <formula>BillingStreet &amp;&quot; &quot;&amp; BillingCity &amp; &quot; &quot; &amp; BillingCountry &amp; &quot; &quot; &amp; BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Actual__c</fullName>
        <label>Won Opportunities Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>equals</operation>
            <value>Closed Won</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>CustomerPriority__c</fullName>
        <label>Customer Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Growth_Account__c</fullName>
        <formula>IF( Opps_Amount__c &gt;750000, TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Growth Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_suport_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Sales users use this field to indicate which customer has suport plan</description>
        <inlineHelpText>Does this customer have a current suport plan? Check this box when you sell a suport plan to a customer.</inlineHelpText>
        <label>Has suport plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NumberofLocations__c</fullName>
        <label>Number of Locations</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opps_Amount__c</fullName>
        <label>Opps Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>Customer&apos;s geografical region - for sales operation use only</description>
        <inlineHelpText>In which region is your customer based?</inlineHelpText>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>East Asia, Ocenia, Southeast Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Africa, Europe, Midle East, UK + Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Caribbean, Central America, South America</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Midwest US, Northeast US, Southeast US, Southwest US, West US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SLAExpirationDate__c</fullName>
        <label>SLA Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SLASerialNumber__c</fullName>
        <label>SLA Serial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SLA__c</fullName>
        <label>SLA</label>
        <picklist>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bronze</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Suport_plan_expiration_date__c</fullName>
        <description>Expiration date for a current support plan</description>
        <inlineHelpText>When the current support plan is due for renewal?</inlineHelpText>
        <label>Suport plan expiration date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UpsellOpportunity__c</fullName>
        <label>Upsell Opportunity</label>
        <picklist>
            <picklistValues>
                <fullName>Maybe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waranty__c</fullName>
        <label>Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>1-year</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3-years</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Zone__c</fullName>
        <description>Customer&apos;s zone within the selected region - or sales operation use only</description>
        <inlineHelpText>In which zone is this customer based? Depends on the region</inlineHelpText>
        <label>Zone</label>
        <picklist>
            <controllingField>Region__c</controllingField>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LATAM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>Manufactory_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
            <value>Manufacturing</value>
        </filters>
        <label>Manufactory Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>PlatinumandGoldSLACustomers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>Platinum and Gold SLA Customers</label>
    </listViews>
    <listViews>
        <fullName>Technology_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.INDUSTRY</field>
            <operation>equals</operation>
            <value>Technology</value>
        </filters>
        <label>Technology Accounts</label>
    </listViews>
    <recordTypes>
        <fullName>Customer_Account</fullName>
        <active>true</active>
        <description>Allows Sales and Consulting users to create and view customers accounts</description>
        <label>Customer Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Partener_Account</fullName>
        <active>true</active>
        <label>Partener Account</label>
    </recordTypes>
    <validationRules>
        <fullName>Support_plan_expiration_date_required</fullName>
        <active>true</active>
        <description>Support plan expiration date when has suport plan is selected</description>
        <errorConditionFormula>Has_suport_plan__c = TRUE &amp;&amp;  ISBLANK( Suport_plan_expiration_date__c )</errorConditionFormula>
        <errorDisplayField>Suport_plan_expiration_date__c</errorDisplayField>
        <errorMessage>You must enter an support plan expiration date</errorMessage>
    </validationRules>
</CustomObject>